--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -105,10 +105,16 @@
 
 \input{chapters/1_introduction}
 \cleardoublepage
-\input{chapters/2_methods}
+\input{chapters/2_background}
 \cleardoublepage
-\input{chapters/3_results}
+\input{chapters/3_data_management}
 \cleardoublepage
+\input{chapters/4_experiments.tex}
+\cleardoublepage
+% \input{chapters/2_methods}
+% \cleardoublepage
+% \input{chapters/3_results}
+% \cleardoublepage
 \input{chapters/4_discussion}
 \cleardoublepage
 \input{chapters/5_conclusion}
