Change basic info

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -21,7 +21,7 @@
 
 % CHANGE HERE FOR GERMAN (german) OR MASTER THESIS (mt)!!!!!
 
-\usepackage[english,bt]{ethidsc} % Special IDSC styles and commands      	
+\usepackage[english,mt]{ethidsc} % Special IDSC styles and commands      	
 								 % {german}/english: language of headings, etc.
 								 % {st}/bt/mt: {semester}/bachelor/master thesis
 
@@ -35,20 +35,20 @@
 
 
 % Title page (please fill in)___________________________________________________
-\title{Title of the Thesis}
+\title{Data storage and retrieval in Ethereum DApps: cost and performance}
 
 
-\studentA{Name Surname}
+\studentA{Periklis Kostamis}
 \ethidA{20-000-00}
-\semesterA{6}
-\emailA{someone@student.ethz.ch}
+\semesterA{5}
+\emailA{perikost@ee.duth.gr}
 
 %\studentB{Second Student}
 %\ethidB{12-345-678}
 %\semesterB{9}
 %\emailB{second@student.ethz.ch}
 
-\supervision{Prof. Dr. Superviser}
+\supervision{Prof. Dr. P.Efraimidis}
 \date{March 10, 2023}
 
 %\identification{IDSC-XX-YY-ZZ} 		% Project identifier
