--- a/thesis/ethidsc.sty
+++ b/thesis/ethidsc.sty
@@ -165,7 +165,7 @@ citation in this subject-area.\\[3ex]
 Declaration of Originality:\\[1.5ex]
 \url{http://www.ethz.ch/faculty/exams/plagiarism/confirmation_en.pdf} 
 \\[6ex] 
-Zurich, \the\day. \the\month. \the\year: %\hrulefill
+Xanthi, \the\day. \the\month. \the\year: %\hrulefill
 \begin{minipage}[c]{0.4\textwidth}
  \begin{flushleft}
  \hspace*{1cm}
@@ -190,17 +190,17 @@ Zurich, \the\day. \the\month. \the\year: %\hrulefill
 \begin{minipage}[c]{0.4\textwidth}
  \begin{flushleft}
  \hspace*{-1.5cm}
- \includegraphics[height=1.5cm]{img/ethlogo.eps}
+ \includegraphics[height=2.5cm]{img/duth-logo-eng.png}
  \end{flushleft}
 \end{minipage}
 \hfill
-\begin{minipage}[c]{0.4\textwidth}
- \begin{flushright}
- \hspace*{0.4cm}
- \includegraphics[height=2cm]{img/eth_dusys_logo_pos(1).png}
- \end{flushright}
-\end{minipage}
-\vspace*{5.0cm}
+% \begin{minipage}[c]{0.4\textwidth}
+%  \begin{flushright}
+%  \hspace*{0.4cm}
+%  \includegraphics[height=2cm]{img/eth_dusys_logo_pos(1).png}
+%  \end{flushright}
+% \end{minipage}
+\vspace*{2.0cm}
 
 {\large \@studentA\if\@studentB\else \ \& \@studentB\fi \\
      \@ethidA}
@@ -218,9 +218,10 @@ Zurich, \the\day. \the\month. \the\year: %\hrulefill
 \else
 
 % ADAPT THIS FOR YOUR INSTITUTE
-Bachelor's Degree Programme in Environmental Sciences \\
-Physics of Soils and Terrestrial Ecosystems Group\\
- Swiss Federal Institute of Technology (ETH) Zurich\\
+Master's Degree Programme in Advanced Electrical and Computer Engineering technologies\\
+Department of Electrical and Computer Engineering\\
+School of Engineering\\
+Democritus University of Thrache\\
 \fi
 \vspace{3.5cm}
 
@@ -260,7 +261,7 @@ Physics of Soils and Terrestrial Ecosystems Group\\
 
 \vspace*{-2cm}
 \hspace{-0.354cm}
-\includegraphics[height=2cm]{img/ethlogo.eps}\\
+\includegraphics[height=2.5cm]{img/duth-logo-eng.png}\\
 
 %\vspace{3cm}
 
