--- a/thesis/ethidsc.sty
+++ b/thesis/ethidsc.sty
@@ -37,7 +37,7 @@
 \ProcessOptions
 
 \RequirePackage[T1]{fontenc}
-\RequirePackage[latin1]{inputenc}
+% \RequirePackage[latin1]{inputenc}
 \RequirePackage{amsmath,amssymb,amsthm}
 \RequirePackage{graphicx}
 \RequirePackage[dvips]{epsfig} 
