--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -27,6 +27,7 @@
 								 % {st}/bt/mt: {semester}/bachelor/master thesis
 
 % MY PACKAGES
+\usepackage{float}
 \usepackage{enumitem}
 \usepackage{setspace}
 \usepackage{xcolor, soul}                         % highlight text
