Add basic background for DFSs

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -376,3 +376,58 @@
   pages     = {53-60},
   doi       = {10.1109/BRAINS52497.2021.9569804}
 }
+
+@misc{IPFS_team_2017,
+  title = {Uncensorable {{Wikipedia}} on {{IPFS}}},
+  author = {{IPFS team}},
+  year = {2017},
+  month = may,
+  journal = {IPFS Blog \& News},
+  urldate = {2023-07-04},
+  abstract = {All the latest information about the IPFS Project in one place: blog posts, release notes, videos, news coverage, and more.},
+  howpublished = {https://blog.ipfs.tech/24-uncensorable-wikipedia/},
+  langid = {english}
+}
+
+@inproceedings{trautwein_2022,
+  title = {Design and Evaluation of {{IPFS}}: A Storage Layer for the Decentralized Web},
+  shorttitle = {Design and Evaluation of {{IPFS}}},
+  booktitle = {Proceedings of the {{ACM SIGCOMM}} 2022 {{Conference}}},
+  author = {Trautwein, Dennis and Raman, Aravindh and Tyson, Gareth and Castro, Ignacio and Scott, Will and Schubotz, Moritz and Gipp, Bela and Psaras, Yiannis},
+  year = {2022},
+  month = aug,
+  pages = {739--752},
+  publisher = {{ACM}},
+  address = {{Amsterdam Netherlands}},
+  doi = {10.1145/3544216.3544232},
+  urldate = {2023-07-04},
+  abstract = {Recent years have witnessed growing consolidation of web operations. For example, the majority of web traffic now originates from a few organizations, and even micro-websites often choose to host on large pre-existing cloud infrastructures. In response to this, the ``Decentralized Web'' attempts to distribute ownership and operation of web services more evenly. This paper describes the design and implementation of the largest and most widely used Decentralized Web platform \textemdash{} the InterPlanetary File System (IPFS) \textemdash{} an open-source, content-addressable peer-to-peer network that provides distributed data storage and delivery. IPFS has millions of daily content retrievals and already underpins dozens of thirdparty applications. This paper evaluates the performance of IPFS by introducing a set of measurement methodologies that allow us to uncover the characteristics of peers in the IPFS network. We reveal presence in more than 2700 Autonomous Systems and 152 countries, the majority of which operate outside large central cloud providers like Amazon or Azure. We further evaluate IPFS performance, showing that both publication and retrieval delays are acceptable for a wide range of use cases. Finally, we share our datasets, experiences and lessons learned.},
+  isbn = {978-1-4503-9420-8},
+  langid = {english}
+}
+
+@misc{daniel_2022,
+  title = {{{IPFS}} and {{Friends}}: {{A Qualitative Comparison}} of {{Next Generation Peer-to-Peer Data Networks}}},
+  shorttitle = {{{IPFS}} and {{Friends}}},
+  author = {Daniel, Erik and Tschorsch, Florian},
+  year = {2022},
+  month = jan,
+  number = {arXiv:2102.12737},
+  eprint = {2102.12737},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  urldate = {2023-07-04},
+  abstract = {Decentralized, distributed storage offers a way to reduce the impact of data silos as often fostered by centralized cloud storage. While the intentions of this trend are not new, the topic gained traction due to technological advancements, most notably blockchain networks. As a consequence, we observe that a new generation of peer-to-peer data networks emerges. In this survey paper, we therefore provide a technical overview of the next generation data networks. We use select data networks to introduce general concepts and to emphasize new developments. Specifically, we provide a deeper outline of the Interplanetary File System and a general overview of Swarm, the Hypercore Protocol, SAFE, Storj, and Arweave. We identify common building blocks and provide a qualitative comparison. From the overview, we derive future challenges and research goals concerning data networks.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Networking and Internet Architecture}
+}
+
+% TODO: find appropriate format
+@misc{ipfs_docs_1,
+  title = {{{IPFS}} and the Problems It Solves | {{IPFS Docs}}},
+  urldate = {2023-07-04},
+  year = {2023},
+  key = {IPFS Docs},
+  Author = {{IPFS Docs}},
+  howpublished = {https://docs.ipfs.tech/concepts/ipfs-solves/\#ipfs-and-the-problems-it-solves}
+}
