Prevent vertical space from being stretched

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -86,6 +86,9 @@
 % Begin document________________________________________________________________
 \begin{document}
 
+% remove rubber spacing between paragraphs
+\raggedbottom
+
 \maketitle 							% Create title page
 
 
