Caching in IPFS & swarm

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -431,3 +431,31 @@
   Author = {{IPFS Docs}},
   howpublished = {https://docs.ipfs.tech/concepts/ipfs-solves/\#ipfs-and-the-problems-it-solves}
 }
+
+@article{gc_2023,
+  title = {Garbage Collection (Computer Science)},
+  year = {2023},
+  month = jul,
+  journal = {Wikipedia},
+  urldate = {2023-07-06},
+  Author = {{Wikipedia}},
+  abstract = {In computer science, garbage collection (GC) is a form of automatic memory management. The garbage collector attempts to reclaim memory which was allocated by the program, but is no longer referenced; such memory is called garbage. Garbage collection was invented by American computer scientist John McCarthy around 1959 to simplify manual memory management in Lisp.Garbage collection relieves the programmer from doing manual memory management, where the programmer specifies what objects to de-allocate and return to the memory system and when to do so. Other, similar techniques include stack allocation, region inference, and memory ownership, and combinations thereof. Garbage collection may take a significant proportion of a program's total processing time, and affect performance as a result. Resources other than memory, such as network sockets, database handles, windows, file descriptors, and device descriptors, are not typically handled by garbage collection, but rather by other methods (e.g. destructors). Some such methods de-allocate memory also.},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english},
+  annotation = {Page Version ID: 1163182357}
+}
+
+@misc{ipfs_docs_2,
+  title = {Persistence | {{IPFS Docs}}},
+  urldate = {2023-07-06},
+  year = {2023},
+  Author = {{IPFS Docs}},
+  howpublished = {https://docs.ipfs.tech/concepts/persistence/\#persistence-permanence-and-pinning}
+}
+
+@misc{ipfs_kubo_gc_2023,
+  title = {Kubo/Gc/Gc.Go at v0.16.0 {$\cdot$} Ipfs/Kubo {$\cdot$} {{GitHub}}},
+  urldate = {2023-07-06},
+  howpublished = {https://github.com/ipfs/kubo/blob/v0.16.0/gc/gc.go\#L50},
+  file = {C\:\\Users\\perik\\Zotero\\storage\\7NLABGB7\\gc.html}
+}
