Add background for IPFS

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -456,6 +456,57 @@
 @misc{ipfs_kubo_gc_2023,
   title = {Kubo/Gc/Gc.Go at v0.16.0 {$\cdot$} Ipfs/Kubo {$\cdot$} {{GitHub}}},
   urldate = {2023-07-06},
-  howpublished = {https://github.com/ipfs/kubo/blob/v0.16.0/gc/gc.go\#L50},
-  file = {C\:\\Users\\perik\\Zotero\\storage\\7NLABGB7\\gc.html}
+  howpublished = {https://github.com/ipfs/kubo/blob/v0.16.0/gc/gc.go\#L50}
+}
+
+@incollection{maymounkov_2002,
+  title = {Kademlia: {{A Peer-to-Peer Information System Based}} on the {{XOR Metric}}},
+  shorttitle = {Kademlia},
+  booktitle = {Peer-to-{{Peer Systems}}},
+  author = {Maymounkov, Petar and Mazi{\`e}res, David},
+  editor = {Goos, Gerhard and Hartmanis, Juris and Van Leeuwen, Jan and Druschel, Peter and Kaashoek, Frans and Rowstron, Antony},
+  year = {2002},
+  volume = {2429},
+  pages = {53--65},
+  publisher = {{Springer Berlin Heidelberg}},
+  address = {{Berlin, Heidelberg}},
+  doi = {10.1007/3-540-45748-8\_5},
+  urldate = {2023-07-08},
+  abstract = {We describe a peer-to-peer system which has provable consistency and performance in a fault-prone environment. Our system routes queries and locates nodes using a novel XOR-based metric topology that simplifies the algorithm and facilitates our proof. The topology has the property that every message exchanged conveys or reinforces useful contact information. The system exploits this information to send parallel, asynchronous query messages that tolerate node failures without imposing timeout delays on users.},
+  isbn = {978-3-540-44179-3 978-3-540-45748-0},
+  langid = {english}
+}
+
+@misc{schmahmann_2020,
+  title = {{{IPFS}} 0.5 {{Content Routing Improvements}}: {{Deep Dive}}},
+  shorttitle = {{{IPFS}} 0.5 {{Content Routing Improvements}}},
+  author = {Schmahmann, Adin},
+  year = {2020},
+  month = jul,
+  journal = {IPFS Blog \& News},
+  urldate = {2023-07-08},
+  abstract = {All the latest information about the IPFS Project in one place: blog posts, release notes, videos, news coverage, and more.},
+  howpublished = {https://blog.ipfs.tech/2020-07-20-dht-deep-dive/},
+  langid = {english}
+}
+
+@misc{multiaddress_2023,
+  title = {Libp2p Specification},
+  author = {{libp2p specs}},
+  year = {2023},
+  month = jul,
+  urldate = {2023-07-09},
+  abstract = {Technical specifications for the libp2p networking stack},
+  howpublished = {libp2p}
+}
+
+@misc{libp2p_2023,
+  title = {Libp2p - Libp2p {{Documentation Portal}}},
+  author = {{Libp2p website}},
+  year = {2023},
+  journal = {libp2p},
+  urldate = {2023-07-10},
+  abstract = {libp2p is a modular system of protocols, specifications and libraries that enable the development of peer-to-peer network applications.},
+  howpublished = {https://docs.libp2p.io/},
+  langid = {american}
 }
