Add package for reviewing

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -27,6 +27,8 @@
 								 % {st}/bt/mt: {semester}/bachelor/master thesis
 
 % MY PACKAGES
+\usepackage{easyReview}
+\setreviewson
 \usepackage{float}
 \usepackage{enumitem}
 \usepackage{setspace}
@@ -51,8 +53,8 @@
 % \usepackage[hyphens]{url}
 \usepackage{hyphenat}
 \hyphenation{block-chain e-the-re-um}
-
-
+\usepackage{tabu}
+\usepackage{tikz}
 							
 % Page header (don't change)____________________________________________________
 \setlength{\parindent}{0em}                 % Disable parindent
