--- a/thesis/ethidsc.sty
+++ b/thesis/ethidsc.sty
@@ -52,7 +52,7 @@
 \RequirePackage[dvipdfm]{geometry}
 \RequirePackage{url}
 \RequirePackage{natbib}
-\RequirePackage{comment}
+% \RequirePackage{comment}
 \RequirePackage{placeins}
 %\RequirePackage{bibref}
 \RequirePackage{gensymb}
