Add background for ethereum

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -617,3 +617,85 @@
   langid = {english},
   annotation = {Page Version ID: 1163481448}
 }
+
+@article{burkholder_1987,
+  title = {The Halting Problem},
+  author = {Burkholder, L},
+  year = {1987},
+  month = apr,
+  journal = {ACM SIGACT News},
+  volume = {18},
+  number = {3},
+  pages = {48--60},
+  issn = {0163-5700},
+  doi = {10.1145/24658.24665},
+  urldate = {2023-07-16}
+}
+
+@misc{etherscaninformationcenter_2022,
+  title = {A {{Beginner}}'s {{Guide}} to {{Hard}} and {{Soft Forks}} in {{Blockchain}}},
+  author = {{Etherscan Information Center}},
+  year = {2022},
+  month = dec,
+  journal = {Etherscan Information Center},
+  urldate = {2023-07-16},
+  abstract = {An introduction to blockchain hard fork and soft fork.},
+  howpublished = {https://info.etherscan.com/a-beginners-guide-to-forks/},
+  langid = {english}
+}
+
+@inproceedings{vujicic_2018,
+  title = {Blockchain Technology, Bitcoin, and {{Ethereum}}: {{A}} Brief Overview},
+  shorttitle = {Blockchain Technology, Bitcoin, and {{Ethereum}}},
+  booktitle = {2018 17th {{International Symposium INFOTEH-JAHORINA}} ({{INFOTEH}})},
+  author = {Vujicic, Dejan and Jagodic, Dijana and Randic, Sinisa},
+  year = {2018},
+  month = mar,
+  pages = {1--6},
+  publisher = {{IEEE}},
+  address = {{East Sarajevo}},
+  doi = {10.1109/INFOTEH.2018.8345547},
+  urldate = {2023-07-16},
+  isbn = {978-1-5386-4907-7}
+}
+
+@misc{ethereumfoundation_2023a,
+  title = {Ethereum {{Improvement Proposals}} ({{EIPs}})},
+  author = {{Ethereum Foundation}},
+  year = {2023},
+  journal = {ethereum.org},
+  urldate = {2023-07-16},
+  abstract = {The basic information you need to understand EIPs},
+  howpublished = {https://ethereum.org},
+  langid = {english}
+}
+
+@misc{ethereumfoundation_2023,
+  title = {History and {{Forks}} of {{Ethereum}}},
+  author = {{Ethereum Foundation}},
+  year = {2023},
+  journal = {ethereum.org},
+  urldate = {2023-07-16},
+  abstract = {A history of the Ethereum blockchain including major milestones, releases, and forks.},
+  howpublished = {https://ethereum.org},
+  langid = {english}
+}
+
+@misc{gastokenproject_2018,
+  title = {{{GasToken}}.Io - {{Cheaper Ethereum Transactions}}, {{Today}}},
+  author = {{GasToken Project}},
+  year = {2018},
+  urldate = {2023-07-17},
+  howpublished = {https://gastoken.io/}
+}
+
+@misc{ethereumfoundation_2023b,
+  title = {{{EIP-1}}: {{EIP Purpose}} and {{Guidelines}}},
+  shorttitle = {{{EIP-1}}},
+  author = {{Ethereum Foundation}},
+  year = {2023},
+  journal = {Ethereum Improvement Proposals},
+  urldate = {2023-07-17},
+  howpublished = {https://eips.ethereum.org/EIPS/eip-1},
+  langid = {english}
+}
