--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -55,6 +55,10 @@
 \hyphenation{block-chain e-the-re-um}
 \usepackage{tabu}
 \usepackage{tikz}
+\setreviewson
+\usepackage{listings}
+\renewcommand{\lstlistingname}{Code}% Listing -> Algorithm
+
 							
 % Page header (don't change)____________________________________________________
 \setlength{\parindent}{0em}                 % Disable parindent
