--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -58,6 +58,7 @@
 \setreviewson
 \usepackage{listings}
 \renewcommand{\lstlistingname}{Code}% Listing -> Algorithm
+\usepackage{xcolor}
 
 							
 % Page header (don't change)____________________________________________________
@@ -103,6 +104,7 @@
 \pagenumbering{roman} 				% Begin roman page numbering (i,ii,...)
 
 \input{chapters/preamble} %Abstract etc.
+\input{figs/solidity-highlighting.tex}	
 
 % Chapters______________________________________________________________________
 
