--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -82,8 +82,8 @@
 
 %\identification{IDSC-XX-YY-ZZ} 		% Project identifier
 
-\infopage
-\declaration
+% \infopage
+% \declaration
 
 % Begin document________________________________________________________________
 \begin{document}
@@ -121,8 +121,8 @@
 % \cleardoublepage
 % \input{chapters/3_results}
 % \cleardoublepage
-\input{chapters/4_discussion}
-\cleardoublepage
+% \input{chapters/4_discussion}
+% \cleardoublepage
 \input{chapters/5_conclusion}
 \cleardoublepage
 
