Fix typo in master's degree title

--- a/thesis/ethidsc.sty
+++ b/thesis/ethidsc.sty
@@ -218,7 +218,7 @@ Xanthi, \the\day. \the\month. \the\year: %\hrulefill
 \else
 
 % ADAPT THIS FOR YOUR INSTITUTE
-Master's Degree Programme in Advanced Electrical and Computer Engineering technologies\\
+Master's Degree Program in Advanced Electrical and Computer Engineering technologies\\
 Department of Electrical and Computer Engineering\\
 School of Engineering\\
 Democritus University of Thrache\\
