Minor adjustments: wordings, typos, etc.

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -502,7 +502,7 @@
 
 @misc{libp2p_2023,
   title = {Libp2p - Libp2p {{Documentation Portal}}},
-  author = {{Libp2p website}},
+  author = {{libp2p website}},
   year = {2023},
   journal = {libp2p},
   urldate = {2023-07-10},
